# icon

./: Cargo.toml  README.md  build.rs
examples/: framework_usage.rs  iconsets_usage.rs  svgl_usage.rs
inspirations/: README.md
schema/: icon.fbs
src/: icon_generated.rs  lib.rs  main.rs
src/converters/: iconsets.rs  mod.rs  svgl.rs  utils.rs
src/readers/: mod.rs
