[package]
name = "dx-icon"
version = "0.0.1"
edition = "2021"

[dependencies]
flatbuffers = "24.3.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.36"
walkdir = "2.4"
regex = "1.12.2"

[build-dependencies]
flatc-rust = "0.2"
flatbuffers = "24.3.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.36"
walkdir = "2.4"
regex = "1.12.2"
